--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -4,7 +4,7 @@
 	width:1em;
 }
 .icon-arrow{
-	background:url('/images/arrow_white.png') no-repeat;
+	background:url('/images/arrow.png') no-repeat;
 	background-size:100%;
 
 	-webkit-transition: all .3s ease-in;
