--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,20 +5,19 @@ $sidebar-width:14em;
 
 $color-main:lighten(#2980b9,10%);
 
-$color-main:#FFBB00;//yellow
 $color-main:#E96B56;//red-rosa
 $color-main:#EB8A48;//orange-brown
 $color-main:#FF7200;//orange
 $color-main:#E4582A;//red
 $color-main:#59A029;//dark green
 $color-main:#6EC633;//green
-$color-main:#F0BF00;//yellow
 $color-main:#F78F1E;//orange
-$color-main:#F6BA00;//yelli
+$color-main:#FFCC33;//yellow
+$color-main:#FFBB00;//yellow
 
 
 
-$color-secondary: #f1c40f;
+$color-secondary: #444;
 
 $color-border:lightgrey;
 
