--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -10,12 +10,10 @@
 	margin-bottom: 2em;
 }
 	.message{
-		padding: 0em 0.5em;
-		border-bottom:1px dotted #EFEFEF;
-		border-left:2px solid transparent;
-		overflow: visible!important;//because jQuery add overflow:hidden when hiding stuff
-		background:#FDFDFD;
-		// background: rgba(255,255,255,.8);
+		padding: 0em 0.7em;
+		border-bottom:1px dotted rgba(250,250,250,.1);
+		overflow: visible!important;//because jQuery adds overflow:hidden when hiding stuff
+		background:#fefefe;
 		border-left:1px solid $color-border;
 		border-right:1px solid $color-border;
 		position:relative;
@@ -77,7 +75,7 @@
 		}
 		
 		.diffUser{
-			margin-top:.7em;
+			margin-top:.8em;
 			border-top-right-radius: .5em;
 			border-top-left-radius: .5em;
 			border-top:1px solid $color-border;
@@ -111,13 +109,12 @@
 	width:100%;
 }
 #mymessage{
-	vertical-align: middle;
-	resize: none;
+	resize: none!important;
 	width: 100%;
 	font-size: 1em;
 	padding: 1em;
+	margin-top:1em;
 
-	//height:3.18em;
 	min-height:2em;
 	outline:none;
 	border:none;
@@ -125,7 +122,7 @@
 	//border-right:2px solid #C8C8C8;
 	background:none;
 
-	border-left:2px solid #C8C8C8;
+	border-left:2px solid darken($color-main,10%);
 	font-family: 'Questrial', sans-serif;
 	
 	overflow-y:hidden;
