--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -63,3 +63,22 @@
 	position: fixed;
 	top:1em;
 }
+
+.loading{
+	display: block;
+	width: 100%;
+	padding: 1em;
+	font-size: 1.3em;
+	color:#848484;
+	background:#D8D8D8;
+	text-align: center;
+	border-radius: .3em;
+
+	margin-bottom: 2em;
+
+	-webkit-transition: all 333ms linear;
+	-moz-transition: all 333ms linear;
+	-ms-transition: all 333ms linear;
+	-o-transition: all 333ms linear;
+	transition: all 333ms linear;
+}
