--- a/css/main.css
+++ b/css/main.css
@@ -647,28 +647,28 @@ SUPER SLICK TRANSFORMS
   margin-top: -.3em;
 }
 
-/* line 62, ../sass/_room.scss */
-.load-more {
-  position: fixed;
-  top: 1em;
-}
-
-/* line 67, ../sass/_room.scss */
+/* line 63, ../sass/_room.scss */
 .loading {
   display: block;
   width: 100%;
-  padding: 1em;
   font-size: 1.3em;
-  color: #848484;
   background: #D8D8D8;
+  color: #848484;
   text-align: center;
   border-radius: .3em;
-  margin-bottom: 2em;
+  opacity: 0;
   -webkit-transition: all 333ms linear;
   -moz-transition: all 333ms linear;
   -ms-transition: all 333ms linear;
   -o-transition: all 333ms linear;
   transition: all 333ms linear;
+}
+/* line 79, ../sass/_room.scss */
+.loading.show-loading {
+  height: auto;
+  padding: 1em;
+  opacity: 1;
+  margin-bottom: 2em;
 }
 
 /* line 1, ../sass/_sidebar.scss */
