--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -59,26 +59,27 @@
 	font-family: 'Questrial', sans-serif;
 	margin-top: -.3em;
 }
-.load-more{
-	position: fixed;
-	top:1em;
-}
 
 .loading{
 	display: block;
 	width: 100%;
-	padding: 1em;
 	font-size: 1.3em;
-	color:#848484;
 	background:#D8D8D8;
+	color:#848484;
 	text-align: center;
 	border-radius: .3em;
 
-	margin-bottom: 2em;
+	opacity: 0;
 
 	-webkit-transition: all 333ms linear;
 	-moz-transition: all 333ms linear;
 	-ms-transition: all 333ms linear;
 	-o-transition: all 333ms linear;
 	transition: all 333ms linear;
+	&.show-loading{
+		height:auto;
+		padding: 1em;
+		opacity: 1;
+		margin-bottom: 2em;
+	}
 }
