--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -18,6 +18,23 @@
 	-ms-transform:rotateZ(0deg);
 	transform:rotateZ(0deg);
 }
+.icon-logout{
+	background:url('/images/logout.png') no-repeat;
+	background-size:100%;
+	height: 1.3em;
+	width: 1.3em;
+	margin-top: -.325em;
+	margin-bottom: -.325em;
+}
+
+.icon-realtime{
+	background:url('/images/realtime.png') no-repeat;
+	background-size:100%;
+	height: 1.3em;
+	width: 1.3em;
+	margin-top: -.325em;
+	margin-bottom: -.325em;
+}
 
 .toggle-sidebar.left .icon-arrow{
 	-webkit-transform:rotateZ(-180deg)!important;
