--- a/sass/_loginButtons.scss
+++ b/sass/_loginButtons.scss
@@ -1,10 +1,14 @@
 .serviceLogin{
 	display: inline-block;
-	padding:1em;
-	margin:.2em;
+	padding:.5em;
+	margin:.5em;
 	width: 4em;
+
+	img{
+		width: 100%;
+	}
 }
-	.twitter{background: #0092CB;}
-	.facebook{background: #0092CB;}
-	.google{background: #0092CB;}
-	.github{background: #0092CB;}
+	// .twitter{background: #0092CB;}
+	// .facebook{background: #0092CB;}
+	// .google{background: #0092CB;}
+	// .github{background: #0092CB;}
