--- a/sass/_loginButtons.scss
+++ b/sass/_loginButtons.scss
@@ -4,9 +4,7 @@
 	margin:.5em;
 	width: 4em;
 
-	img{
-		width: 100%;
-	}
+	cursor: pointer;
 }
 	// .twitter{background: #0092CB;}
 	// .facebook{background: #0092CB;}
