--- a/css/main.css
+++ b/css/main.css
@@ -712,24 +712,26 @@ SUPER SLICK TRANSFORMS
   /* line 1, ../sass/_sidebar.scss */
   .fixed-sidebar {
     background: #444444;
+    background: #c4c4c4;
     color: #eee;
+    color: #222;
   }
-  /* line 50, ../sass/_sidebar.scss */
+  /* line 52, ../sass/_sidebar.scss */
   .fixed-sidebar .online-user {
-    color: #eee;
+    color: inherit;
   }
 }
-/* line 55, ../sass/_sidebar.scss */
+/* line 57, ../sass/_sidebar.scss */
 .fixed-sidebar:hover {
   opacity: 1;
 }
-/* line 57, ../sass/_sidebar.scss */
+/* line 59, ../sass/_sidebar.scss */
 .fixed-sidebar:hover .online-users-count {
   opacity: 1 !important;
 }
 
 @media all and (max-width: 62em) {
-  /* line 64, ../sass/_sidebar.scss */
+  /* line 66, ../sass/_sidebar.scss */
   .csstransforms .fixed-sidebar.show {
     -webkit-transform: translate3d(16em, 0, 0);
     -moz-transform: translate3d(16em, 0, 0);
@@ -740,24 +742,24 @@ SUPER SLICK TRANSFORMS
 }
 
 @media all and (max-width: 62em) {
-  /* line 76, ../sass/_sidebar.scss */
+  /* line 78, ../sass/_sidebar.scss */
   .no-csstransforms .fixed-sidebar.show {
     left: 0 !important;
   }
 }
 
-/* line 82, ../sass/_sidebar.scss */
+/* line 84, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 84, ../sass/_sidebar.scss */
+/* line 86, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 91, ../sass/_sidebar.scss */
+/* line 93, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -765,21 +767,23 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 99, ../sass/_sidebar.scss */
+/* line 101, ../sass/_sidebar.scss */
 #logout, #toggleRealtime {
   float: left;
   margin-left: 0.8em;
   margin-top: 0.6em;
+  text-decoration: none;
+  border: 1px solid darkgrey;
 }
 
-/* line 112, ../sass/_sidebar.scss */
+/* line 117, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 1.5em;
   text-align: left;
   list-style-type: none;
 }
 
-/* line 117, ../sass/_sidebar.scss */
+/* line 122, ../sass/_sidebar.scss */
 .online-user {
   display: block;
   text-overflow: ellipsis;
@@ -788,7 +792,7 @@ SUPER SLICK TRANSFORMS
   color: #444;
 }
 
-/* line 125, ../sass/_sidebar.scss */
+/* line 130, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -796,13 +800,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 131, ../sass/_sidebar.scss */
+/* line 136, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 136, ../sass/_sidebar.scss */
+/* line 141, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -828,7 +832,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 62em) {
-  /* line 136, ../sass/_sidebar.scss */
+  /* line 141, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -836,7 +840,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 176, ../sass/_sidebar.scss */
+/* line 181, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -853,20 +857,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 62em) {
-  /* line 176, ../sass/_sidebar.scss */
+  /* line 181, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 201, ../sass/_sidebar.scss */
+/* line 206, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 210, ../sass/_sidebar.scss */
+/* line 215, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -876,16 +880,16 @@ SUPER SLICK TRANSFORMS
   float: left;
   opacity: .5;
 }
-/* line 221, ../sass/_sidebar.scss */
+/* line 226, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 224, ../sass/_sidebar.scss */
+/* line 229, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 230, ../sass/_sidebar.scss */
+/* line 235, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
   top: 1.5em;
@@ -941,12 +945,10 @@ SUPER SLICK TRANSFORMS
 
 /* line 44, ../sass/_messages.scss */
 .text {
-  display: inline-block;
+  display: block;
   vertical-align: middle;
   margin-left: .5em;
   margin-right: .5em;
-  margin-top: .2em;
-  margin-bottom: .2em;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
@@ -960,22 +962,37 @@ SUPER SLICK TRANSFORMS
   display: none;
 }
 
-/* line 64, ../sass/_messages.scss */
-.message-image {
-  max-height: 5em;
+/* line 63, ../sass/_messages.scss */
+.message-image-wrapper {
+  position: relative;
   display: inline-block;
-  float: left;
-  clear: left;
-  margin-top: .2em;
-  margin-top: .2em;
 }
-/* line 71, ../sass/_messages.scss */
-.message-image.exp {
-  max-width: 100%;
-  max-height: auto !important;
+/* line 69, ../sass/_messages.scss */
+.message-image-wrapper .open-in-new-tab {
+  position: absolute;
+  top: .2em;
+  right: -1em;
+  height: 1em;
+  width: 1em;
+  background: url("/images/link.png") no-repeat;
+  background-size: 100%;
 }
 
-/* line 77, ../sass/_messages.scss */
+/* line 79, ../sass/_messages.scss */
+.message-image {
+  display: inline-block;
+  max-height: 5em;
+  margin-top: .2em;
+  margin-top: .2em;
+}
+/* line 85, ../sass/_messages.scss */
+.message-image.exp {
+  max-width: 32em;
+  max-height: inherit;
+  width: 100%;
+}
+
+/* line 92, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -983,14 +1000,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 83, ../sass/_messages.scss */
+/* line 98, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 90, ../sass/_messages.scss */
+/* line 105, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -998,12 +1015,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 108, ../sass/_messages.scss */
+/* line 123, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 111, ../sass/_messages.scss */
+/* line 126, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1020,60 +1037,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 141, ../sass/_messages.scss */
+  /* line 156, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 142, ../sass/_messages.scss */
+  /* line 157, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 145, ../sass/_messages.scss */
+  /* line 160, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 146, ../sass/_messages.scss */
+  /* line 161, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 149, ../sass/_messages.scss */
+  /* line 164, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 150, ../sass/_messages.scss */
+  /* line 165, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 153, ../sass/_messages.scss */
+  /* line 168, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 154, ../sass/_messages.scss */
+  /* line 169, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 157, ../sass/_messages.scss */
+  /* line 172, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 158, ../sass/_messages.scss */
+  /* line 173, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
@@ -1166,9 +1183,10 @@ input[type='text'].change:focus {
   width: 1.3em;
   margin-top: -.325em;
   margin-bottom: -.325em;
+  margin-left: .325em;
 }
 
-/* line 30, ../sass/_icons.scss */
+/* line 31, ../sass/_icons.scss */
 .icon-realtime {
   background: url("/images/realtime.png") no-repeat;
   background-size: 100%;
@@ -1178,7 +1196,7 @@ input[type='text'].change:focus {
   margin-bottom: -.325em;
 }
 
-/* line 40, ../sass/_icons.scss */
+/* line 41, ../sass/_icons.scss */
 .toggle-sidebar.left .icon-arrow {
   -webkit-transform: rotateZ(-180deg) !important;
   -moz-transform: rotateZ(-180deg) !important;
@@ -1187,7 +1205,7 @@ input[type='text'].change:focus {
   transform: rotateZ(-180deg) !important;
 }
 
-/* line 48, ../sass/_icons.scss */
+/* line 49, ../sass/_icons.scss */
 .toggle-sidebar:hover .icon-arrow {
   -webkit-transform: rotateZ(-45deg);
   -moz-transform: rotateZ(-45deg);
@@ -1196,29 +1214,29 @@ input[type='text'].change:focus {
   transform: rotateZ(-45deg);
 }
 
-/* line 56, ../sass/_icons.scss */
+/* line 57, ../sass/_icons.scss */
 .icon-twitter, .icon-facebook, .icon-github, .icon-google {
   background-size: 100%;
   width: 1em;
   height: 1em;
 }
 
-/* line 61, ../sass/_icons.scss */
+/* line 62, ../sass/_icons.scss */
 .icon-twitter {
   background: url("/images/social/twitter.png") no-repeat;
 }
 
-/* line 64, ../sass/_icons.scss */
+/* line 65, ../sass/_icons.scss */
 .icon-facebook {
   background: url("/images/social/facebook.png") no-repeat;
 }
 
-/* line 67, ../sass/_icons.scss */
+/* line 68, ../sass/_icons.scss */
 .icon-github {
   background: url("/images/social/github.png") no-repeat;
 }
 
-/* line 70, ../sass/_icons.scss */
+/* line 71, ../sass/_icons.scss */
 .icon-google {
   background: url("/images/social/google.png") no-repeat;
 }
