--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -12,7 +12,8 @@
 	margin-bottom:-2em;
 
 	overflow-y:auto;
-
+	
+	background: url('/images/pattern-black-1.png');
 
 	-webkit-transition: all $animation-duration ease-in-out;
 	-moz-transition: all $animation-duration ease-in-out;
@@ -43,17 +44,7 @@
 		
 		box-shadow: 1em 0 1em lightgrey;
 	}
-	@media all and (max-width: $limit + $sidebar-width*2){
-		background:$color-secondary;
-		background:#c4c4c4;
-		color:#eee;
-		color:#222;
-
-		.online-user{
-			color:inherit;
-		}
-	}
-
+	
 	&:hover{
 		opacity:1;
 		& .online-users-count{
