--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -11,7 +11,6 @@
 }
 	.message{
 		padding: 0em 0.7em;
-		border-bottom:1px dotted rgba(250,250,250,.1);
 		overflow: visible!important;//because jQuery adds overflow:hidden when hiding stuff
 		background:#fefefe;
 		border-left:1px solid $color-border;
@@ -42,10 +41,9 @@
 			border:1px solid darkgrey;
 		}
 		.text{
-			display: block;
+			display: inline-block;
 			vertical-align: middle;
-			margin-left:.5em;
-			margin-right:.5em;
+			margin: .2em .3em;
 			// margin-top:.2em;
 			// margin-bottom:.2em;
 			-ms-word-break: break-all;
